[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/GameScene.gd" type="Script" id=1]
[ext_resource path="res://scenes/CarStats.tscn" type="PackedScene" id=2]

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="CarStats" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 385.817, 10.0671 )
scale = Vector2( 0.7, 0.7 )

[node name="target_container" type="Node2D" parent="."]

[node name="label_container" type="Node2D" parent="."]
z_index = 20

[node name="p1_laps" type="Label" parent="."]
margin_left = 20.3577
margin_top = 474.218
margin_right = 131.358
margin_bottom = 522.218
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player 1
Lap: 0
Time: 00.00"
